# contour-context

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: batch_bin_test_config.yaml  dataset_id.cfg  dummy_lc.rviz  filming.rviz  kitti_reg_test_config.yaml  score_thres_basic.cfg.bk  score_thres_kitti_bag_play.cfg  score_thres_kitti_bag_play_2.cfg  score_thres_kitti_bag_play_paper.cfg
include/cont2/: benchmarker.h  contour.h  contour_db.h  contour_mng.h  correlation.h  io_bin.h  util.h
include/cont2_ros/: io_ros.h  spinner_ros.h
include/eval/: evaluator.h
include/tools/: algos.h  bm_util.h  config_handler.h  pointcloud_util.h
log/: runtime_subtotals.ods  timing_cont2_paper.txt
results/outcome_txt/: outcome-kitti08.txt
sample_data/: kitti00_10to15.txt  ts-sens_pose-kitti08.txt
scripts/: cmp_2contours.py  format_mulran_as_kitti.py  gen_batch_bin_configs.py  gen_thres_dirs.py  plot_contours.py  plot_gmm.py  pr_mpe.py  raw_ts_to_sec.py  run_thres.sh
src/cont2/: benchmarker.cpp  contour.cpp  contour_db.cpp  contour_mng.cpp  correlation.cpp
src/cont2_ros/: io_ros.cpp  spinner_ros.cpp
src/eval/: evaluator.cpp
src/test/: bag_play_test.cpp  batch_bin_test.cpp  connected_comp_test.cpp  dummy_test.cpp  kitti_read_bin_test.cpp  nanoflann_test.cpp
test/: bag_play_test.cpp  batch_bin_test.cpp  batch_para_bin_test.cpp  kitti_read_bin_test.cpp  kitti_reg.cpp  nanoflann_test.cpp  vis_point_cloud_test.cpp
